insurance funnel: Removing unnecessary html tags and styling which corrects the alignment problems and correcting styles accordingly

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -200,13 +200,20 @@ h3 {
         border-radius: 4px;
       }
 
-      span.active_selection_card {
-        border-color: #41bf93;
+      span.threecol.btn:hover {
+        background-color: #2541b2;
+        border-color: #2541b2;
+        color:white;
       }
 
-      span.threecol:hover {
-        background-color: #41bf93;
-        border-color: #41bf93;
+      span.threecol.btn {
+        background-color: #d6d0d0;
+        border-color: #d6d0d0;
+      }
+
+      span.threecol.btn.active_selection_card {
+        border-color: #2541b2;
+        color:white;
       }
 
       span span {
